# palantir

./: .dockerignore  .drone.yml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
api/: Cargo.toml
api/src/: apply.rs  lib.rs  metrics.rs  resource.rs  service_entries.rs  utils.rs
app/: Cargo.toml
app/src/: lib.rs  shell.rs  web_app.rs
app/src/api/: apply.rs  events.rs  metrics.rs  mod.rs  namespaces.rs  nodes.rs  pods.rs  service_entries.rs  services.rs  utils.rs  workloads.rs
app/src/api/accounts/: bindings.rs  mod.rs  roles.rs  secrets.rs  serviceaccounts.rs
app/src/api/cluster/: events.rs  namespaces.rs  nodes.rs
app/src/api/storage/: claims.rs  mod.rs  storageclasses.rs  volumes.rs
app/src/api/workloads/: configmaps.rs  daemonsets.rs  deployments.rs  ingresses.rs  jobs.rs  mod.rs  pods.rs  replicasets.rs  services.rs
app/src/components/: mod.rs
app/src/components/cluster/: nodes.rs
app/src/components/events/: mod.rs
app/src/components/shared/: data.rs  info.rs  layout.rs  mod.rs  spacer.rs  table.rs  wrapper.rs
app/src/components/shared/actions/: containers.rs  delete.rs  edit.rs  exec.rs  follow.rs  logs.rs  mod.rs  namespaces.rs  previous.rs  prompt.rs  save.rs  scale.rs
app/src/components/shared/card/: card_circle.rs  card_string.rs  mod.rs
app/src/components/shared/dialog/: apply_yaml.rs  confirm.rs  input.rs  mod.rs
app/src/components/shared/filters/: label.rs  mod.rs  namespace.rs  prompt.rs  spacer.rs
app/src/components/shared/toast/: mod.rs
app/src/components/stats/: events.rs  mod.rs  nodes.rs  pods.rs  shared.rs
app/src/domain/: event.rs  metrics.rs  mod.rs  namespace.rs  node.rs  pod.rs  service.rs
app/src/domain/account/: bindings.rs  mod.rs  roles.rs  secret.rs  serviceaccount.rs
app/src/domain/account/bindings/: binding.rs  clusterbinding.rs  mod.rs
app/src/domain/account/roles/: clusterrole.rs  mod.rs  role.rs
app/src/domain/cluster/: event.rs  mod.rs  namespace.rs  node.rs  pod.rs
app/src/domain/shared/: metadata.rs  mod.rs  response.rs  template.rs
app/src/domain/storage/: claim.rs  mod.rs  storageclass.rs  volume.rs
app/src/domain/workload/: configmap.rs  daemonset.rs  deployment.rs  ingress.rs  job.rs  mod.rs  replicaset.rs  service.rs
app/src/pages/: dashboard.rs  facade.rs  mod.rs
app/src/pages/accounts/: mod.rs
app/src/pages/accounts/binding/: binding_info.rs  binding_subjects.rs  mod.rs
app/src/pages/accounts/bindings/: bindings_list.rs  mod.rs
app/src/pages/accounts/clusterbinding/: cluster_binding_info.rs  cluster_binding_subjects.rs  mod.rs
app/src/pages/accounts/clusterrole/: cluster_role_info.rs  cluster_role_rules.rs  mod.rs
app/src/pages/accounts/role/: mod.rs  role_info.rs  role_rules.rs
app/src/pages/accounts/roles/: mod.rs  roles_list.rs
app/src/pages/accounts/secret/: mod.rs  secret_data.rs  secret_info.rs
app/src/pages/accounts/secrets/: mod.rs  secrets_list.rs
app/src/pages/accounts/serviceaccount/: mod.rs  serviceaccount_info.rs
app/src/pages/cluster/: mod.rs  namespaces.rs  node.rs  nodes.rs
app/src/pages/cluster/namespace/: mod.rs  namespace_events.rs  namespace_info.rs  namespace_pods.rs
app/src/pages/cluster/namespaces/: mod.rs  namespaces_list.rs
app/src/pages/cluster/node/: mod.rs  node_conditions.rs  node_info.rs  node_pods.rs
app/src/pages/cluster/nodes/: mod.rs  nodes_list.rs
app/src/pages/components/: expandable.rs  layout.rs  mod.rs
app/src/pages/components/cluster/: nodes.rs
app/src/pages/components/dashboard/: card_circle.rs  card_list.rs  mod.rs
app/src/pages/components/shared/: layout.rs  mod.rs
app/src/pages/components/shared/card/: card_circle.rs  card_list.rs  mod.rs
app/src/pages/components/stats/: events.rs  mod.rs  nodes.rs  pods.rs
app/src/pages/profile/: current_user.rs  mod.rs
app/src/pages/storage/: claims.rs  mod.rs  volumes.rs
app/src/pages/storage/claim/: claim_info.rs  mod.rs
app/src/pages/storage/claims/: claims_list.rs  mod.rs
app/src/pages/storage/storageclass/: mod.rs  storageclass_info.rs
app/src/pages/storage/volume/: mod.rs  volume_info.rs
app/src/pages/storage/volumes/: mod.rs  volumes_list.rs
app/src/pages/utils/: dashboard.rs  mod.rs
app/src/pages/utils/shared/: effects.rs  mod.rs  text.rs  time.rs
app/src/pages/utils/stats/: mod.rs  pod_stats.rs
app/src/pages/workloads/: config.rs  mod.rs  services.rs
app/src/pages/workloads/configmap/: configmap_data.rs  configmap_info.rs  mod.rs
app/src/pages/workloads/configmaps/: configs_list.rs  mod.rs
app/src/pages/workloads/deployment/: deployment_info.rs  deployment_info_container.rs  deployment_pods.rs  deployment_replicasets.rs  deployment_stats.rs  mod.rs
app/src/pages/workloads/ingress/: ingress_info.rs  ingress_rules.rs  mod.rs
app/src/pages/workloads/ingresses/: ingresses_list.rs  mod.rs
app/src/pages/workloads/job/: job_info.rs  job_info_container.rs  job_pods.rs  job_stats.rs  mod.rs
app/src/pages/workloads/pod/: mod.rs  pod_info.rs  pod_info_container.rs  pod_stats.rs
app/src/pages/workloads/pod_exec/: exec_view.rs  mod.rs
app/src/pages/workloads/pod_logs/: logs_view.rs  mod.rs
app/src/pages/workloads/replica/: mod.rs  replicaset_info.rs  replicaset_info_container.rs  replicaset_list.rs  replicaset_pods.rs  replicaset_stats.rs
app/src/pages/workloads/replicas/: mod.rs  replicasets_list.rs
app/src/pages/workloads/service/: mod.rs  service_events.rs  service_info.rs
app/src/pages/workloads/services/: mod.rs  services_list.rs
app/src/utils/: mod.rs
app/src/utils/shared/: display.rs  effects.rs  mod.rs  text.rs  time.rs
app/src/utils/stats/: mod.rs  pod_stats.rs
domain/: Cargo.toml
domain/src/: lib.rs  metrics.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  ws.rs
styles/: cluster.scss  dashboard.scss  exec.scss  facade.scss  loader.scss  logs.scss  main.scss  profile.scss  theme.scss
styles/components/: actions.scss  card.scss  components.scss  dialog.scss  expandable.scss  filters.scss  layout.scss  toast.scss  wrapper.scss
(+48 files in other folders)
