[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.7.0-rc2" }
leptos_meta = { version = "0.7.0-rc2" }
leptos_router = { version = "0.7.0-rc2" }
leptos_axum = { version = "0.7.0-rc2" }

axum = "0.7"
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
http = "1"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "5.0"
thiserror = "2.0"
tokio = { version = "1.33", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
wasm-bindgen = "=0.2.95"

[[workspace.metadata.leptos]]
name = "palantir"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "styles/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
