[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = "0.7.0"
leptos_meta = "0.7.0"
leptos_router = "0.7.0"
leptos_axum = "0.7.0"

axum = "0.7.9"
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.33", features = ["full"] }
wasm-bindgen = "=0.2.100"
web-sys = "0.3.77"

[[workspace.metadata.leptos]]
name = "palantir"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "styles/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
