[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
api = { path = "../api" }
domain = { path = "../domain" }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

base64.workspace = true
chrono.workspace = true
regex.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
