[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
tokio.workspace = true
